# Splice

./: .gitignore  .pdm-python  pyproject.toml
src/: Splice.py  main.py
src/classes/: beam.py  cbush.py  fem.py  mpc.py  nodes.py
