[project]
name = "splice"
version = "0.0.1"
description = "A Python package for data processing and analysis"
authors = [{ name = "Nikita Avdeev", email = "nikita.avdeev@gulfstream.com" }]
dependencies = ["numpy>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"

[dependency-groups]
dev = [
    "pdm",     # Package manager
    "pytest",  # For testing
    "ruff",    # For code formating
    "pyright", # Typing
]

[tool.pdm.scripts]
format = 'ruff format src'
lint = 'ruff check src --fix'
typing = 'pyright src'

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PGH",    # pygrep-hooks
    "RUF",    # ruff
    "YTT",    # flake8-2020
    "NPY201", # numpy 2.0
]
extend-ignore = [
    "E101",   # Indentation contains mixed spaces and tabs
    "E501",   # Line too long
    "W291",   # Trailing whitespace
    "PGH004", # Use specific rule codes when using `noqa`
]

[tool.pyright]
python_version = "3.13"
reportIndexIssue = false
